# huffman-archiver

./: CMakeLists.txt  README.md
include/: archiver.h  code.h  exceptions.h  node.h  reader.h  tree.h  writer.h
sample/: book.txt  test.in  utf8.txt
src/: archiver.cpp  code.cpp  main.cpp  node.cpp  reader.cpp  tree.cpp  writer.cpp
test/: doctest.h  test_data_processing.cpp  test_huffman.cpp
